3-31-2025
- changed default wallpaper for omori theme
- added temperature module coloring for omori waybar theme


3-24-2025
- finally managed to install the mov-cli-youtube plugin


3-23-2025
- update flake
- redid swww module. Home manager finally added their own service.
Should still function as before
- removed polkit-gnome as home-manager added the module to the default
- added optional bios argument to makehost: Can take "legacy" or "UEFI" and sets the appropriate boot options.


3-10-2025
- added hacker-mode nixos profile
- created the "gman-pc" profile to sync preferences among all machines
- added thinkfan for twilight
- temperature module for twilight
- added nix-gaming input and improved pipewire delay
- Fixed the networkmanager icon not showing up on waybar


2-28-2025
- add neovim-custom option to both nixos and HM
- default to my custom vim package but can be modified or disabled


2-27-2025
- direnv seperated into its own module
- removed the stupid warning message from direnv
- vim update:
  - cleanup dashboard
	- change flake structure
	- repo flake will now create a temporary neovim with the config (still kind of buggy)
	- remove some old vim plugins that I dont use at all such as gruvbox and gdb
	- downgrade blink-cmp 13.0 > 12.4
- add LACT an amdgpu control gui
- rename workstation profile to laptop
- redo sddm module
- use astronaut theme in nixpkgs


2-23-2025
- Fixed keymap to not interfere with games
- updated home-manager module option names
- make the logout button work for hyprland (hopefully)

- major neovim update
- replace telescope with snacks.picker
- remove bloated plugins
- space lg will now launch lazygit inside of neovim
- space / for find text
- new splash screen


2-22-2025
- update changelog


2-21-2025
- add logout to waybar
- swaylock config (no longer a white screen)
- swaylock will now trigger when laptop lid is closed


2-16-2025
- remove garth config, replaced with twilight, a lenovo thinkpad x230 with coreboot skulls.