@@ -1,13 +1,11 @@
 { pkgs, lib, config, ... }:
-# not copied ;)
 {
   programs.yazi = {
     package = pkgs.yazi;
     shellWrapperName = "y";
-    enableZshIntegration = true; # adds function "yy"
+    enableZshIntegration = true;
     settings = import ./settings.nix {
       inherit pkgs lib config;
     };
-    keymap = import ./keymap.nix { inherit pkgs; };
   };
 }
