@@ -19,6 +19,13 @@
       desc = "Open with $EDITOR";
       block = true;
     }];
+    pdf = [
+      {
+        run = ''${lib.getExe pkgs.evince} "$@"'';
+        desc = "Open with evince";
+        orphan = true;
+      }
+    ];
     reveal = [
       {
         run = ''${lib.getExe pkgs.exiftool} "$1"; echo "Press <enter> to exit"; read _'';
@@ -149,6 +156,10 @@
         {
           mime = "application/xz";
           use = [ "extract" "reveal" ];
+        }
+        {
+          mime = "application/pdf";
+          use = [ "pdf" "reveal" ];
         }
         {
           mime = "*";
