@@ -29,6 +29,7 @@ in
       targets = {
         vscode.enable = mkDefault false;
         feh.enable = mkDefault false;
+        kde.enable = mkDefault false;
       };
 
       cursor = {
